# ffservice

./: .gitignore  Cargo.toml  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
lib-ffmpeg/: Cargo.toml  build.rs
lib-ffmpeg/src/: ffmpeg.c  ffmpeg.h  lib.rs  transcoder.c  transcoder.h
proto/: video.proto
samples/: samples.txt
src/: client.rs  lib.rs  main.rs  server.rs  thumbnailer.rs  video_client.rs  video_server.rs
tests/: integration.rs
tests/features/: transcoding.feature
