[package]
name = "ffservice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-ffmpeg = { path = "./lib-ffmpeg" }
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-stream = "0.3.5"
ffmpeg-next = "6.1.1"
futures-core = "0.3.28"
image = "0.24.6"
prost = "0.12.0"
tempfile = "3.5.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.10.0"

[build-dependencies]
tonic-build = "0.10.0"

[dev-dependencies]
cucumber = { version = "0.20", features = ["libtest"] }
futures = "0.3.28"

[[test]]
name = "integration"
harness = false

[workspace]
members = ["lib-ffmpeg"]
